--- a/website/src/styles/_sidebar.scss
+++ b/website/src/styles/_sidebar.scss
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 
   @include desktop-only() {
     border-top-width: 0;
